Некоторые обновления + mobile_api.yaml

--- a/conf_shed/templates/pr-reg.html
+++ b/conf_shed/templates/pr-reg.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <nav>
-    <a href="/index">Домашняя страница</a>
+    <a href="/">Домашняя страница</a>
 </nav>
 <h2>Новое выступление</h2>
     <form action="pr-regsuc" method="post">
