--- a/conf_shed/templates/pr-regsuc.html
+++ b/conf_shed/templates/pr-regsuc.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <nav>
-    <a href="/index">Домашняя страница</a>
+    <a href="/">Домашняя страница</a>
 </nav>
 <h3>Вы выступаете в {{ time }} в аудитории {{ room }}</h3>
 Ваш уникальный номер в расписании {{ shed }}
