--- a/conf_shed/templates/pr-view.html
+++ b/conf_shed/templates/pr-view.html
@@ -7,6 +7,6 @@
 <body>
     <h2>Страница в разработке.</h2>
 Будет доступна в будущих обновлениях<br>
-Сейчас можно <a href="/index">вернуться на домашнюю страницу</a>
+Сейчас можно <a href="/">вернуться на домашнюю страницу</a>
 </body>
 </html>
