--- a/conf_shed/templates/reg.html
+++ b/conf_shed/templates/reg.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <nav>
-    <a href="/index">Домашняя страница</a>
+    <a href="/">Домашняя страница</a>
 </nav>
 <h2>Регистрация на презентацию</h2>
     <form action="regsuc" method="post">
