--- a/conf_shed/templates/regsuc.html
+++ b/conf_shed/templates/regsuc.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <nav>
-    <a href="/index">Домашняя страница</a>
+    <a href="/">Домашняя страница</a>
 </nav>
   <h1>Успешная регистрация {{ name }} на презентацию {{ pr_id }}</h1>
 </body>
